Change of Homepage

--- a/package.json
+++ b/package.json
@@ -25,6 +25,6 @@
   "bugs": {
     "url": "https://github.com/Deischox/NftHigherLower/issues"
   },
-  "homepage": "https://github.com/Deischox/NftHigherLower#readme",
+  "homepage": "https://deischox.github.io/NftHigherLowerGame",
   "description": ""
 }
